@@ -2,6 +2,8 @@ rfc-errata (0.1.5) distribution(s); urgency=low
 
 	* RFC Editor requested some changes in how the templates are worded
 	* Fixed corner case where an entire section can disappear
+	* Return a count of errors
+	* Fix an error with a None field for new text
 
 -- Jim Schaad <ietf@augustcellars.com>  Tue 18 June 2019 12:00:00 -0800
 
